[gd_scene load_steps=7 format=3 uid="uid://d2da0thyq5rq8"]

[ext_resource type="Script" path="res://src/inspector_elements/enum_field.gd" id="1_vkd5r"]
[ext_resource type="Texture2D" uid="uid://coda6chhcatal" path="res://visual/icons/Down.svg" id="2_3cosj"]
[ext_resource type="PackedScene" uid="uid://wp77eqhikp6k" path="res://src/inspector_elements/context_popup.tscn" id="3_qw0q5"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fpguh"]
content_margin_left = 3.0
content_margin_top = 2.0
content_margin_right = 2.0
content_margin_bottom = 0.0
bg_color = Color(0.0705882, 0.0705882, 0.2, 1)
border_width_left = 1
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.105882, 0.14902, 0.301961, 1)
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_detail = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r5acu"]
content_margin_left = 3.0
content_margin_top = 2.0
content_margin_right = 2.0
content_margin_bottom = 0.0
bg_color = Color(0.0901961, 0.0901961, 0.2, 1)
border_width_left = 1
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.203922, 0.254902, 0.4, 1)
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_detail = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5n6p7"]
content_margin_left = 3.0
content_margin_top = 2.0
content_margin_right = 2.0
content_margin_bottom = 0.0
bg_color = Color(0.321569, 0.439216, 0.8, 1)
border_width_left = 1
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.541176, 0.721569, 0.901961, 1)
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_detail = 16

[node name="EnumField" type="VBoxContainer"]
offset_bottom = 22.0
script = ExtResource("1_vkd5r")

[node name="MainLine" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(0, 22)
layout_mode = 2
theme_override_constants/separation = 0

[node name="LineEdit" type="LineEdit" parent="MainLine"]
custom_minimum_size = Vector2(56, 0)
layout_mode = 2
context_menu_enabled = false
select_all_on_focus = true
caret_blink = true

[node name="Button" type="Button" parent="MainLine"]
custom_minimum_size = Vector2(14, 0)
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_fpguh")
theme_override_styles/hover = SubResource("StyleBoxFlat_r5acu")
theme_override_styles/pressed = SubResource("StyleBoxFlat_5n6p7")
icon = ExtResource("2_3cosj")

[node name="ContextPopup" parent="." instance=ExtResource("3_qw0q5")]
visible = false

[connection signal="text_changed" from="MainLine/LineEdit" to="." method="_on_line_edit_text_changed"]
[connection signal="text_submitted" from="MainLine/LineEdit" to="." method="_on_line_edit_text_submitted"]
[connection signal="pressed" from="MainLine/Button" to="." method="_on_button_pressed"]
